--- a/.eslintrc
+++ b/.eslintrc
@@ -1,26 +1,27 @@
 {
-"env": {
+  "env": {
     "browser": true,
     "es6": true,
     "node": true
-},
-"extends": ["eslint:recommended", "plugin:react/recommended"],
-"parserOptions": {
+  },
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "parserOptions": {
     "parser": "babel-eslint",
     "ecmaVersion": "latest",
     "sourceType": "module"
-},
-"rules": {
+  },
+  "rules": {
+    // "react/prop-types": "off",
     "react/react-in-jsx-scope": "off",
     "no-console": "off",
     "no-loop-func": ["error"],
     "eqeqeq": ["error", "always"],
     "strict": ["error", "global"],
     "max-nested-callbacks": [
-    "error",
-    {
+      "error",
+      {
         "max": 7
-    }
+      }
     ],
     "new-parens": ["error"],
     "no-unneeded-ternary": ["error"],
@@ -29,41 +30,41 @@
     "space-in-parens": ["error", "never"],
     "space-infix-ops": ["error"],
     "space-unary-ops": [
-    "error",
-    {
+      "error",
+      {
         "words": true,
         "nonwords": false,
         "overrides": {
-        "typeof": false
+          "typeof": false
         }
-    }
+      }
     ],
     "no-unreachable": ["error"],
     "no-global-assign": ["error"],
     "no-self-compare": ["error"],
     "no-unmodified-loop-condition": ["error"],
     "no-constant-condition": [
-    "error",
-    {
+      "error",
+      {
         "checkLoops": false
-    }
+      }
     ],
     "no-useless-concat": ["error"],
     "no-useless-escape": ["error"],
     "no-shadow-restricted-names": ["error"],
     "no-use-before-define": [
-    "error",
-    {
+      "error",
+      {
         "functions": false
-    }
+      }
     ],
     "arrow-body-style": ["error", "as-needed"],
     "arrow-spacing": ["error"],
     "no-confusing-arrow": [
-    "error",
-    {
+      "error",
+      {
         "allowParens": true
-    }
+      }
     ],
     "no-useless-computed-key": ["error"],
     "no-useless-rename": ["error"],
@@ -88,10 +89,10 @@
     "no-with": "error",
     "prefer-promise-reject-errors": "error",
     "no-unused-vars": [
-    "error",
-    {
+      "error",
+      {
         "args": "none"
-    }
+      }
     ],
     "array-bracket-newline": "off",
     "array-bracket-spacing": ["error", "never"],
@@ -99,10 +100,10 @@
     "block-spacing": ["error", "never"],
     "brace-style": "error",
     "camelcase": [
-    "error",
-    {
+      "error",
+      {
         "properties": "never"
-    }
+      }
     ],
     "comma-dangle": ["error", "only-multiline"],
     "comma-spacing": "error",
@@ -111,78 +112,78 @@
     "eol-last": "error",
     "func-call-spacing": "error",
     "indent": [
-    "error",
-    2,
-    {
+      "error",
+      2,
+      {
         "CallExpression": {
-        "arguments": 1
+          "arguments": 1
         },
         "FunctionDeclaration": {
-        "body": 1,
-        "parameters": 2
+          "body": 1,
+          "parameters": 2
         },
         "FunctionExpression": {
-        "body": 1,
-        "parameters": 2
+          "body": 1,
+          "parameters": 2
         },
         "MemberExpression": 1,
         "ObjectExpression": 1,
         "SwitchCase": 1,
         "ignoredNodes": ["ConditionalExpression"]
-    }
+      }
     ],
     "key-spacing": "error",
     "keyword-spacing": "error",
     "max-len": [
-    "error",
-    {
-        "code": 100,
+      "error",
+      {
+        "code": 80,
         "tabWidth": 2,
         "ignoreUrls": true,
-        "ignorePattern": "goog.(module|require)"
-    }
+        "ignorePattern": "goog.(module|require)|d=('|\")[\\s\\S]*('|\")"
+      }
     ],
     "new-cap": "error",
     "no-array-constructor": "error",
     "no-mixed-spaces-and-tabs": "error",
     "no-multiple-empty-lines": [
-    "error",
-    {
+      "error",
+      {
         "max": 2
-    }
+      }
     ],
     "no-new-object": "error",
     "no-tabs": "error",
     "no-trailing-spaces": "error",
     "object-curly-spacing": "error",
     "one-var": [
-    "error",
-    {
+      "error",
+      {
         "var": "never",
         "let": "never",
         "const": "never"
-    }
+      }
     ],
     "operator-linebreak": ["error", "after"],
     "padded-blocks": ["error", "never"],
     "quote-props": ["error", "consistent"],
     "quotes": [
-    "error",
-    "single",
-    {
+      "error",
+      "single",
+      {
         "allowTemplateLiterals": true
-    }
+      }
     ],
     "semi": "error",
     "semi-spacing": "error",
     "space-before-blocks": "error",
     "space-before-function-paren": [
-    "error",
-    {
+      "error",
+      {
         "asyncArrow": "always",
         "anonymous": "never",
         "named": "never"
-    }
+      }
     ],
     "spaced-comment": ["error", "always"],
     "switch-colon-spacing": "error",
@@ -192,14 +193,14 @@
     "no-this-before-super": "error",
     "no-var": "error",
     "prefer-const": [
-    "error",
-    {
+      "error",
+      {
         "destructuring": "all"
-    }
+      }
     ],
     "prefer-rest-params": "error",
     "prefer-spread": "error",
     "rest-spread-spacing": "error",
     "yield-star-spacing": ["error", "after"]
-}
+  }
 }
